--- a/sites/all/themes/hk_theme/sass/components/_leaflet.scss
+++ b/sites/all/themes/hk_theme/sass/components/_leaflet.scss
@@ -376,6 +376,8 @@ div.hide-submit-processing {
   #search {
     display: none;
   }
+  /*.field-name-field-inquiry,
+  .field-name-field-participants { display: none; }*/
 }
 
 [id^="crm-core-profile-entry-form-anfrage-"],
