--- a/sites/all/themes/hk_theme/sass/layout.scss
+++ b/sites/all/themes/hk_theme/sass/layout.scss
@@ -34,6 +34,7 @@ $site-max-width: 100%;
     position: fixed;
     height: 90px;
     z-index: 102;
+    margin-top: 30px;
     @media screen and (max-width: 667px) {
       height: 60px;
     }
